Code cleanup and example fixes